Sun Jan 13 09:58:17 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_init): revert removing SJIS.
	
	* enc/sjis.c: move to enc/shift_jis.c, to make encoding name equal to
	  filename for convinience of loading lib.

	* enc/shift_jis.c: moved from enc/sjis.c.

	* common.mk: follows enc/shift_jis.c.

	* enc/Makefile.in: ditto.

Sun Jan 13 09:22:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (incs): includes encdb.h.

Sun Jan 13 09:17:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* {bcc,win}32/Makefile.sub (MV): use move instead of ren.  [ruby-Bugs-17019]

Sun Jan 13 01:52:31 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enc/make_encdb.rb: should work on Ruby 1.8.  [ruby-dev:33069]

	* common.mk (encdb.h): pass enc dir from outside to make_encdb.rb.

Sun Jan 13 00:01:07 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/make_encdb.rb: added. search enc/*.c and make encoding database.

	* regenc.h (ENC_REPLICATE, ENC_ALIAS): added for defining replica
	  encoding and encoding alias.

	* encoding.c (rb_enc_init): move alias definitions to enc/*.c.
	  (rb_enc_find_index): search original of replica and alias when no
	  encoding library.
	  (rb_enc_name_list, rb_enc_aliases_enc_i, rb_enc_aliases_str_i,
	   rb_enc_aliases, Encoding.name_list, Encoding.aliases): added.
	  (Init_Encoding): init encdb.	

	* enc/ascii.c, enc/us_ascii.c, enc/euc_jp.c, enc/sjis.c:
	  add replica encoding and encoding alias difinition.

	* common.mk (dist-clean-local): add rule for remvoe encdb.h.

Sat Jan 12 18:27:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_define_alloc_func, rb_undef_alloc_func): should
	  define/undef on a signleton class.  [ruby-core:09959]

Sat Jan 12 12:44:36 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf.c: rdoc update.

Sat Jan 12 12:01:49 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb, lib/date/format.rb: tuning for performance.

Sat Jan 12 11:29:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>