@@ -1,3 +1,7 @@
+Sun Jan 13 10:21:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* encoding.c (enc_table): packed all enc_table stuff.
+
 Sun Jan 13 09:58:17 2008  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* encoding.c (rb_enc_init): revert removing SJIS.
